--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -26,6 +26,10 @@
     <!-- This file store project specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
 
+    <!-- Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Bowlby+One+SC' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+
     {% endblock %}
 
 {#    {% block angular %}#}
