--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ project_name }}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Django Dash 2013 project exploring ways to connect mentors and mentees learning to code.
+">
+    <meta name="author" content="Nate Aune, Brian Dant, Chris Van Schyndel">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
