show the social account on signup page, not just login page

--- a/mentorup/static/css/project.css
+++ b/mentorup/static/css/project.css
@@ -44,3 +44,8 @@ body.sign-in form.login {
   padding: 0;
   color: inherit;
 }
+
+/* line 64, ../sass/project.scss */
+ul.socialaccount_providers li {
+  list-style: none;
+}
