--- a/mentorup/static/sass/project.scss
+++ b/mentorup/static/sass/project.scss
@@ -58,3 +58,10 @@ body.sign-in {
         color: inherit;
     }
 }
+
+// social accounts list
+
+ul.socialaccount_providers li {
+    list-style: none;
+}
+
