--- a/mentorup/templates/account/email.html
+++ b/mentorup/templates/account/email.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <div class="col-md-5">
+    <div class="span-">
       <h2>{% trans "E-mail Addresses" %}</h2>
       {% if user.emailaddress_set.all %}
       <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -36,9 +36,9 @@
         {% endfor %}
 
       <div class="buttonHolder">
-            <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-            <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-            <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+            <button class="btn btn-large btn-success" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+            <button class="btn btn-large btn-primary" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+            <button class="btn btn-large btn-danger" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
       </div>
 
       </fieldset>
@@ -55,7 +55,7 @@
           <form method="post" action="" class="add_email">
               {% csrf_token %}
               {{ form|crispy }}
-              <button class="btn" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+              <button class="btn btn-large btn-success" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
           </form>
     
 {% endblock %}
