--- a/mentorup/templates/avatar/add.html
+++ b/mentorup/templates/avatar/add.html
@@ -14,7 +14,7 @@
         {% endif %}
         <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
             {{ upload_avatar_form.as_p }}
-            <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
+            <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" class="btn btn-large btn-success" /></p>
         </form>
     </div>
   </div>
