--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -8,9 +8,13 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-1">
+      {% avatar user %}
+    </div>
 
-      <h2>{{ object.username }}</h2>
+    <div class="col-sm-11">
+      <h3>{{ object.first_name }} {{ object.last_name }}</h3>
+      <h4>({{ object.username }})</h4>
     </div>
   </div>
 
@@ -19,7 +23,7 @@
 <div class="row">
 
   <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
+    <a class="btn btn-primary" href="{% url 'users:update' %}">Update my profile</a>
     <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
     <a class="btn btn-info" href="{% url 'avatar_change' %}">Avatar</a>
     <!-- Your Stuff: Custom user template urls -->
@@ -29,6 +33,9 @@
 <!-- End Action buttons -->
 {% endif %}
 
-
+<div class="row">
+  <div class="col-sm-12">
+  <p>{{ object.short_bio }}</p>
+  </div>
 </div>
 {% endblock content %}
