Initial styles for member list page.

--- a/mentorup/static/css/project.css
+++ b/mentorup/static/css/project.css
@@ -2,45 +2,78 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 10, ../sass/project.scss */
+/* line 12, ../sass/project.scss */
 body, div.header, input.textinput {
-  background-color: #2C3E50;
+  background-color: #2c3e50;
   color: #bdc3c7;
   font-family: 'Inconsolata', sans-serif;
 }
-/* line 16, ../sass/project.scss */
+/* line 18, ../sass/project.scss */
 body a:link, div.header a:link, input.textinput a:link {
   color: #bdc3c7;
 }
 
-/* line 24, ../sass/project.scss */
+/* line 26, ../sass/project.scss */
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Bowlby One SC', cursive;
   font-weight: 400;
+  color: #c0392b;
 }
 
-/* line 32, ../sass/project.scss */
+/* line 35, ../sass/project.scss */
 .navbar .nav a:hover {
   color: #c0392b;
 }
-/* line 37, ../sass/project.scss */
+/* line 40, ../sass/project.scss */
 .navbar .nav > li.active > a {
   color: #c0392b;
 }
 
-/* line 45, ../sass/project.scss */
+/* line 48, ../sass/project.scss */
 .btn-redhot {
   background-color: #c0392b;
 }
-/* line 47, ../sass/project.scss */
+/* line 50, ../sass/project.scss */
 .btn-redhot:hover, .btn-redhot:focus {
   background-color: #c0392b;
 }
 
-/* line 55, ../sass/project.scss */
+/* line 56, ../sass/project.scss */
+img.img-thumbnail {
+  background-color: #bdc3c7;
+  margin-bottom: 1%;
+}
+
+/* line 64, ../sass/project.scss */
 body.sign-in form.login {
   background: none;
   padding: 0;
   color: inherit;
+}
+
+/* line 73, ../sass/project.scss */
+body.members h2 {
+  padding-left: 0;
+  margin-bottom: 2%;
+}
+/* line 79, ../sass/project.scss */
+body.members .avatar-container h4 {
+  display: inline-block;
+}
+/* line 83, ../sass/project.scss */
+body.members .avatar-container a {
+  color: #bdc3c7;
+}
+/* line 87, ../sass/project.scss */
+body.members .avatar-container div.name {
+  display: inline-block;
+}
+/* line 90, ../sass/project.scss */
+body.members .avatar-container div.name span {
+  display: inline-block;
+}
+/* line 94, ../sass/project.scss */
+body.members .avatar-container div.name .username {
+  color: #c0392b;
 }
