--- a/mentorup/templates/users/user_list.html
+++ b/mentorup/templates/users/user_list.html
@@ -2,29 +2,34 @@
 {% load static %}{% load i18n %}
 {% load avatar_tags %}
 
-{% block title %}Members{% endblock %}
+{% block title %}Mentor UP Members{% endblock %}
+{% block body_class %}members{% endblock %}
 
 {% block content %}
 
 <div class="container">
     
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Users</h2>
-    </div>
+      <h2>MentorUP Members</h2>
   </div>
 
   <div class="row">
-    <div class="col-lg-12">
-      <div class="list-group">
-          {% for user in user_list %}
-            <a href="{% url 'users:detail' user.username %}" class="list-group-item">
-              <h4 class="list-group-item-heading">{% avatar user %} {{ user.username }}</h4>
-              <p class="list-group-item-text">{{ maker.tagline }}</p>
-            </a>
-          {% endfor %}
-        
-      </div>
+    <div class="list-group">
+        {% for user in user_list %}
+          <a href="{% url 'users:detail' user.username %}">
+            <div class="avatar-container">
+              <span class="avatar">{% avatar user %} </span>
+              <div class="name">
+                <span><h4>{{ user.first_name }} {{ user.last_name }}</h4></span><br>
+                <span class="username">{{ user.username }}</span>
+              </div>
+                <span>{{ user.tagline }}</span>
+                <span>{{ user.short_bio }}</span>
+              <a href="#" class="btn btn-info pull-right contact-me">Contact Me</a> 
+            </div>
+          </a>
+          <hr>
+        {% endfor %}
     </div>
   </div>
 
