--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -26,6 +26,7 @@
     <a class="btn btn-primary" href="{% url 'users:update' %}">Update my profile</a>
     <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
     <a class="btn btn-info" href="{% url 'avatar_change' %}">Avatar</a>
+    <a class="btn btn-info" href="{% url 'socialaccount_connections' %}">Social Networks</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
@@ -36,6 +37,9 @@
 <div class="row">
   <div class="col-sm-12">
   <p>{{ object.short_bio }}</p>
+  {% if object.github_profile_url %}
+  <p><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</p>
+  {% endif %}
   </div>
 </div>
 {% endblock content %}
