Quick Path Fix for Chosen

--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -105,7 +105,7 @@
 
       <!-- place project specific Javascript in this file -->
       <script src="{% static 'js/project.js' %}"></script>
-      <script src="{% static 'js/select2.js' %}"></script>
+      <script src="{% static 'js/select_js/select2.js' %}"></script>
       <script>
         $(document).ready(function() { $("#bagel").select2({
             data:[{id:0,text:'enhancement'},{id:1,text:'bug'},{id:2,text:'duplicate'},{id:3,text:'invalid'},{id:4,text:'wontfix'}]
