--- a/mentorup/static/sass/project.scss
+++ b/mentorup/static/sass/project.scss
@@ -26,7 +26,6 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Bowlby One SC', cursive;
     font-weight: 400;
-    color: $red-hot;
 }
 
 .navbar {
@@ -68,32 +67,27 @@ body.sign-in {
     }
 }
 
+//@mixin list-view-section {
+//        display: inline-block;
+//        min-height: 100px;
+//        border-right: solid;
+//        border-width: 1px;
+//        border-color: $gray;
+//        padding: 0 10px;
+//    }
+
 // Members page
 body.members {
     h2 {
-        padding-left: 0;
         margin-bottom: 2%;
+        padding-left: 15px;
     }
 
-    .avatar-container {
-        h4 {
-          display: inline-block;
-        } 
+    .list-bio {
+        font-size: 22px;
+    }
 
-        a {
-            color: $gray;
-        }
-        
-        div.name {
-            display: inline-block;
-
-            span {
-                display: inline-block;
-            }
-
-            .username {
-                color: $red-hot;
-            }
-        }
+    a {
+        color: $gray;
     }
 }
