--- a/mentorup/templates/users/user_list.html
+++ b/mentorup/templates/users/user_list.html
@@ -23,11 +23,18 @@
               <p class="list-group-item-text">{{ maker.tagline }}</p>
             </a>
           {% endfor %}
-        
       </div>
     </div>
   </div>
 
+</div>
+  <div class="select2-container select2-container-multi populate" id="bagel" style="width: 300px;">
+    <ul class="select2-choices">
+      <li class="select2-search-field">
+        <input type="hidden" autocorrect="off" autocapitalize="off" spellcheck="false" class="select2-input select2-focused" tabindex="0">
+      </li>
+    </ul>
+  <div>
 </div>
 
 {% endblock content %}
