--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -51,11 +51,11 @@
           <li><a href="{% url 'about' %}">About</a></li>
 
           {% if request.user.is_authenticated %}
-            <li><a href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>
-            <li><a href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
+            <li><a href="{% url 'users:detail' request.user.username  %}"><i class="icon-user"></i>&nbsp;{% trans "My Profile" %}</a></li>
+            <li><a href="{% url 'account_logout' %}"><i class="icon-off"></i>&nbsp;{% trans "Logout" %}</a></li>
           {% else %}
             <li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
-            <li><a href="{% url 'account_login' %}">{% trans "Log In" %}</a></li>
+            <li><a href="{% url 'account_login' %}"><i class="icon-lock">&nbsp</i>&nbsp;{% trans "Log In" %}</a></li>
           {% endif %}
         </ul>
       </div>
