Classy Class Based Friggin' View removed.

--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -112,8 +112,8 @@
 
       <script>
         $(document).ready(function() { 
-          $("#id_skills_to_learn").select2(); 
-          $("#id_skills_to_teach").select2();
+          $("#id_skills_to_learn").select2({placeholder: 'Choose the skills you want to learn'}); 
+          $("#id_skills_to_teach").select2({placeholder: 'Choose the skills you want to teach'});
         })
 
         // $(document).ready(function() { $("#bagel").select2({
