--- a/mentorup/templates/users/user_form.html
+++ b/mentorup/templates/users/user_form.html
@@ -11,7 +11,7 @@
             <h1>{% block header %}User: {{ user.username }}{% endblock %}</h1>
             <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {% crispy form %}
                 <div class="control-group">
                   <div class="controls">
                     <button type="submit" class="btn btn-large btn-success">Update</button>
