--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -5,7 +5,28 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 
 {% block content %}
+
 <div class="container">
+
+{% if object == request.user %}
+<!-- Action buttons -->     
+<div class="row">
+
+  <div class="col-sm-12">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#">View my profile</a></li>
+      <li><a href="{% url 'users:update' %}">Update my profile</a></li>
+      <li><a href="{% url 'account_email' %}">E-Mail</a></li>
+      <li><a href="{% url 'postman_inbox' %}">My messages</a></li>
+      <li><a href="{% url 'avatar_change' %}">Photo</a></li>
+      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>
+    </ul>
+  </div>
+
+</div>
+<!-- End Action buttons -->
+
+{% endif %}
 
   <div class="row">
     <div class="col-sm-1">
@@ -23,29 +44,17 @@
     </div>
   </div>
 
-{% if object == request.user %}
-<!-- Action buttons -->     
-<div class="row">
-
-  <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">Update my profile</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
-    <a class="btn btn-info" href="{% url 'avatar_change' %}">Avatar</a>
-    <a class="btn btn-info" href="{% url 'socialaccount_connections' %}">Social Networks</a>
-    <!-- Your Stuff: Custom user template urls -->
-  </div>
-
-</div>
-<!-- End Action buttons -->
-
-{% endif %}
-
 <div class="row">
   <div class="col-sm-12">
   <p>{{ object.short_bio }}</p>
   {% if object.github_profile_url %}
-  <p><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</p>
+  <p><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</a></p>
   {% endif %}
+  {% if object.location %}
+  <p><i class="icon-map-marker"></i>&nbsp;{{ object.display_location }}</p>
   </div>
+  {% endif %}
+</div>
+
 </div>
 {% endblock content %}
