select2 is now working! whoopee!

--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -13,11 +13,15 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <!-- for some reason, jQuery needs to go *before* select2.js or else you get this error:
+    "Uncaught ReferenceError: jQuery is not defined"
+    -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
     {% block css %}
     <!-- Latest compiled and minified CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href="{% static 'select2/css/select2.css' %}" rel="stylesheet"/>
 
 {#    <!-- Optional theme -->#}
 {#    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">#}
@@ -35,6 +39,8 @@
 
     {% endblock %}
 
+    {% block extra_css %}
+    {% endblock %}
 {#    {% block angular %}#}
 {#      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>#}
 {#    {% endblock %}#}
@@ -76,43 +82,34 @@
     <!-- Placed at the end of the document so the pages load faster -->
     {% block javascript %}
       <!-- Latest JQuery -->
-{#      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>#}
-      <script src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
+      <!-- <script src="{% static 'js/jquery-1.8.3.min.js' %}"></script> -->
 
       <!-- Latest compiled and minified JavaScript -->
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+      <!-- if we have bootstrap.min.js served up from this CDN, then we don't need to
+      also serve it up locally -->
+      <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
 
       <!-- Your stuff: Third-party javascript libraries go here -->
       <!-- Load JS here for greater good =============================-->
       <script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
       <script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
-      <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
       <script src="{% static 'js/bootstrap-select.js' %}"></script>
       <script src="{% static 'js/bootstrap-switch.js' %}"></script>
       <script src="{% static 'js/flatui-checkbox.js' %}"></script>
       <script src="{% static 'js/flatui-radio.js' %}"></script>
       <script src="{% static 'js/jquery.tagsinput.js' %}"></script>
       <script src="{% static 'js/jquery.placeholder.js' %}"></script>
-      <script src="{% static 'select2/js/select2.js' %}"></script>
 
       <!-- place project specific Javascript in this file -->
       <script src="{% static 'js/project.js' %}"></script>
 
-      <script>
-        $(document).ready(function() { 
-          $("#id_skills_to_learn").select2({placeholder: 'Choose the skills you want to learn'}); 
-          $("#id_skills_to_teach").select2({placeholder: 'Choose the skills you want to teach'});
-        })
-
-        // $(document).ready(function() { $("#bagel").select2({
-        //     data:[{id:0,text:'enhancement'},{id:1,text:'bug'},{id:2,text:'duplicate'},{id:3,text:'invalid'},{id:4,text:'wontfix'}]
-        // });
- 
-        // var data=[{id:0,tag:'enhancement'},{id:1,tag:'bug'},{id:2,tag:'duplicate'},{id:3,tag:'invalid'},{id:4,tag:'wontfix'}];
-        // function format(item) { return item.tag; };
-        // });
-      </script>
     {% endblock javascript %}
+
+    {% block extra_javascript %}
+    {% endblock %}
   </body>
 </html>
  
