--- a/mentorup/templates/users/user_form.html
+++ b/mentorup/templates/users/user_form.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags django_select2_tags %}
 
 {% block title %}User: {{ user.username }}{% endblock %}
+
+{% block extra_css %}
+    {% import_django_select2_css %}
+{% endblock %}
 
 {% block content %}
 
@@ -22,3 +26,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block extra_javascript %}
+    {% import_django_select2_js %}
+{% endblock %}    
