--- a/mentorup/static/sass/project.scss
+++ b/mentorup/static/sass/project.scss
@@ -53,3 +53,11 @@ ul.socialaccount_providers li {
     list-style: none;
 }
 
+ul.user-attributes {
+    list-style: none;
+    padding-left: 0;
+}
+
+ul.user-attributes li {
+    padding-bottom: 10px;
+}
