--- a/mentorup/templates/users/user_form.html
+++ b/mentorup/templates/users/user_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}User: {{ user.username }}{% endblock %}
+{% block title %}Member: {{ user.username }}{% endblock %}
 
 {% block content %}
 
@@ -22,3 +22,6 @@
     </div>
 </div>
 {% endblock %}
+
+
+
