--- a/mentorup/templates/base.html
+++ b/mentorup/templates/base.html
@@ -12,11 +12,6 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- for some reason, jQuery needs to go *before* select2.js or else you get this error:
-    "Uncaught ReferenceError: jQuery is not defined"
-    -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
     {% block css %}
     <!-- Latest compiled and minified CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -65,10 +60,13 @@
     <!-- Load JS here for greater good =============================-->
     {% block javascript %}
       <!-- Latest JQuery -->
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+      {# <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> #}
+
+      <script src="{% static 'js/jquery-2.0.3.min.js' %}" type="text/javascript"></script>
 
       <!-- Latest compiled and minified JavaScript -->
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+      {# <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script> #}
+      <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 
       <!-- Your stuff: Third-party javascript libraries go here -->
 {#      <script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>#}
