--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -31,7 +31,7 @@
 
 <div class="row">
   <div class="col-sm-1">
-    {% avatar user %}
+    {% avatar object %}
   </div>
 
   <div class="col-sm-11">
@@ -42,8 +42,8 @@
     {% endif %}
     <h2>{{ object.first_name }} {{ object.last_name }}</h2>
     <ul class="user-attributes">
-      <li><a href="{% url 'users:detail' user.username %}"><i class="icon-user"></i>&nbsp;{{ user.username }}</a></li>
-      <li><i class="icon-map-marker"></i>&nbsp;{{ user.display_location }}</li>
+      <li><a href="{% url 'users:detail' object.username %}"><i class="icon-user"></i>&nbsp;{{ object.username }}</a></li>
+      <li><i class="icon-map-marker"></i>&nbsp;{{ object.display_location }}</li>
       {% if object.github_profile_url %}
       <li><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</a></li>
     {% endif %}
